[project]
name = "credit-risk-analytics"
version = "0.1.0"
description = "Credit risk analytics project using Lending Club data"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "plotly>=5.0.0",
    "seaborn>=0.11.0",
    "scipy>=1.9.0",
    "kagglehub>=0.2.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "dotenv>=0.9.9",
    "logger>=1.4",
    "scikit-learn>=1.3.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]
